@@ -19,7 +19,7 @@
   </tr>
   <tr>
     <td align="center" valign="top" width="22">
-      <a href="NuttxDocumentation.html">
+      <a href="NuttXDocumentation.html">
         <img height="20" width="20" src="favicon.ico">
       </a>
     </td>
@@ -52,6 +52,7 @@
       <li><a href="http://www.raztek-inc.com" target="main">Raztek Solutions</a></li>
       <li><a href="http://www.2g-eng.com" target="top">2G Engineering</a></li>
       <li><a href="http://isotel.eu/Home/" target="top">ISOTEL Research</a></li>
+      <li><a href="http://www.dspworks.in/" target="top">DSPWorks</a></li>
   </tr>
   <tr>
     <td colspan="2" align="center" valign="top">
