@@ -50,7 +50,7 @@
   </tr>
   <tr>
     <td align="center" valign="top" width="22">
-      <a href="NuttxCommercial.html">
+      <a href="NuttXCommercial.html">
         <img height="20" width="20" src="favicon.ico">
       </a>
     </td>
