@@ -19,7 +19,7 @@
   </tr>
   <tr>
     <td align="center" valign="top" width="22">
-      <a href="NuttxDocumentation.html">
+      <a href="NuttXDocumentation.html">
         <img height="20" width="20" src="favicon.ico">
       </a>
     </td>
@@ -43,7 +43,7 @@
   </tr>
   <tr>
     <td align="center" valign="top" width="22">
-      <a href="NuttxCommercial.html">
+      <a href="NuttXCommercial.html">
         <img height="20" width="20" src="favicon.ico">
       </a>
     </td>
